<resources>
    <string name="app_name">1st Dadieso Brigade</string>
    <string name="nav_weeklyact">News and Events</string>
    <string name="nav_programOut">Program Outline</string>
    <string name="nav_Biblestudy">Bible Studies &amp; Stories</string>
    <string name="nav_signup">Log In</string>
    <string name="nav_s1">Welcome to</string>
    <string name="nav_s2">1st Dadieso Brigade </string>
    <string name="nav_annualreport">Annual Report</string>
    <string name="nav_dues">Dues payment</string>
    <string name="almanac">Methodist Church Ghana Almanac(2021)</string>
    <string name="old_testament">Bible Stories from the Old Testament</string>
    <string name="bible_young_people">Bible Stories for the young people</string>
    <string name="bible_little_children">Bible Stories for little children</string>
    <string name="nav_welfare">Welfare Policy</string>
    <string name="nav_anthem">Brigade Anthem</string>
    <string name="nav_scores">Band Music Library</string>
    <string name="nav_videos">Video Library</string>
    <string name="nav_bbknowledge">BB and GB Knowledge</string>
    <string name="nav_patrons">Membership</string>
    <string name="nav_dadiesoBB">Our History</string>
    <string name="nav_dev">App &amp; Developer</string>
    <string name="nav_ann">Annual Activities</string>
    <string name="nav_other">Others</string>
    <string name="nav_cmt">Contact Us</string>
    <string name="nav_cmlc">Leave a comment</string>
    <string name="nav_cmtmail">Email</string>
    <string name="nav_abt">About</string>
    <string name="nav_img1">Social Media</string>
    <string name="ant">Brigade Anthem</string>
    <string name="ants1">Stanza 1</string>
    <string name="ants12">Stanza 2</string>
    <string name="ants13">Stanza 3</string>
    <string name="pp">Play</string>
    <string name="mmt1">Staff</string>
    <string name="mmt2">More</string>
    <string name="mmt3">Tonic</string>
    <string name="yn">Your Name</string>
    <string name="ye">Your Email</string>
    <string name="yc">Your Comment</string>
    <string name="cm">Chat Room</string>
    <string name="pro">Profile</string>
    <string name="mb">MEMBERSHIP</string>
    <string name="AP">App Manual</string>
    <string name="EX">Exit</string>
    <string name="pat">Patrons</string>
    <string name="bag">Boys\' &amp; Girls\' </string>
    <string name="chap">Chaplain</string>
    <string name="off">Officers</string>
    <string name="snr">Senior Section</string>d
    <string name="com">Company Section</string>
    <string name="jnr">Junior Section</string>
    <string name="ants14">Stanza 4</string>
    <string name="ret">RETRY</string>
    <string name="jn">Junior </string>
    <string name="snb">Senior </string>
    <string name="comp">Company </string>
    <string name="an">Anchor</string>
    <string name="psg">Sorry, page not available</string>
    <string name="nav_pset">Reset Password</string>
    <string name="plspsign">Please enter your email for password reset</string>
    <string name="pn">Brigader</string>
    <string name="sng">Senior</string>
    <string name="jng">Junior</string>
    <string name="fgp">Forgot Password?</string>
    <string name="ne">NETWORK ERROR</string>
    <string name="ne1">Please check your internet connection and refresh page</string>
    <string name="Rt">Rate Us</string>
    <string name="exp">Explorer</string>
    <string name="vbs">Various Boys\' Sections</string>
    <string name="vgs">Various Girls\' Sections</string>
    <string name="cho">Girls\'</string>
    <string name="Meths">Methodist Church Ghana</string>
    <string name="bys">Boys\'</string>
    <string name="em">Email</string>
    <string name="ps">Password</string>
    <string name="ys">YES</string>
    <string name="ynno">NO</string>
    <string name="popm">Please are you sure you want close this App?</string>
    <string name="mhb">M.H.B 634</string>
    <string name="nav_brig">1st Dadieso Brigade</string>
    <string name="plssign">Please Enter your details to login</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drill_book">Drill Book</string>
    <string name="change_password">Change Password</string>
    <string name="refresh">Refresh</string>
    <string name="update_app">Check Update</string>
    <string name="devotion">Devotion</string>
    <string name="please_kindly_click_on_the_button_below_to_make_payment_to_the_amb_project_fund">Please kindly click on the button below to make your monthly donation towards the AMB Biennial Band Festival. GH₵ 50p for boy\'s and girl\'s and  GH₵ 1.00 and more for officers.</string>

   <!-- <string name="banner_ad_unit_id">ca-app-pub-6606249369201085/5119039788</string>-->
   <string name="banner_ad_unit_id">ca-app-pub-6606249369201085/5119039788</string>
    <string name="colour_presentation">Colour Presentation</string>
    <string name="the_story_of_adam_and_eve">The Story of adam and eve</string>
    <string name="_1">1</string>
    <string name="a_m_b_band_festival">A.M.B Band Festival</string>
    <string name="make_your_payment">Make Payment</string>
    <string name="support_developer">Support Developer</string>
    <string name="hymn_book">Hymn Book</string>


</resources>
