<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#1927DE"
    android:layout_height="match_parent"
    tools:context=".Passwordreset">

    <ImageView
        android:layout_width="70dp"
        android:src="@drawable/ic_baseline_account_circle_24"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/nav_img1"
        android:layout_height="70dp"/>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/nav_pset"
        android:gravity="center_horizontal"
        android:textColor="#fff"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="70dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/plspsign"
        android:fontFamily="sans-serif-condensed"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="130dp"
        android:textColor="#fff"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/loginback"
        android:layout_marginTop="200dp"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_height="80dp">

            <EditText
                android:id="@+id/Epasswordreset"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:autofillHints="@string/em"
                android:drawableStart="@drawable/email"
                android:drawablePadding="20dp"
                android:hint="@string/em"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/Btnpasswordreset"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="180dp"
            android:background="@drawable/loginbtnback"
            android:fontFamily="monospace"
            android:text="@string/nav_signup"
            android:textColor="#fff"
            android:textStyle="bold" />

        <ProgressBar
            android:layout_width="50dp"
            android:id="@+id/passwprdresetprogressbar"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"
            android:layout_height="50dp"/>
    </RelativeLayout>
</RelativeLayout>