<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        app:cardBackgroundColor="#05106D"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_height="130dp">

        <ImageView
            android:layout_width="30dp"
            android:id="@+id/imgpop"
            android:src="@drawable/infoouut"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/nav_img1"
            android:layout_height="30dp"/>

        <TextView
            android:layout_width="match_parent"
            android:text="@string/popm"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textColor="#fff"
            android:id="@+id/txtmessage"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginTop="35sp"
            android:layout_height="match_parent"/>

        <ScrollView
            android:layout_width="wrap_content"

            android:layout_gravity="center_horizontal"
            android:layout_height="match_parent">

            <GridLayout
                android:layout_width="match_parent"
                android:columnCount="2"
                android:rowCount="1"
                android:layout_marginTop="99dp"
                android:layout_height="wrap_content">

                <Button
                    android:background="@drawable/popupbackgroud"
                    android:layout_height="25sp"
                    android:text="@string/ynno"
                    android:id="@+id/btnnegative"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="#fff"
                    android:layout_width="60dp"/>

                <Button
                    android:background="@drawable/popupbackgroud2"
                    android:layout_height="25dp"
                    android:text="@string/ys"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:id="@+id/btnpositive"
                    android:textColor="#4CAF50"
                    android:layout_marginStart="20dp"
                    android:layout_width="60dp"/>

            </GridLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>
</RelativeLayout>