<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#1927DE"
    android:layout_height="match_parent"
    tools:context=".loginreport">


    <ImageView
        android:layout_width="70dp"
        android:src="@drawable/ic_baseline_account_circle_24"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/nav_img1"
        android:layout_height="70dp"/>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/nav_signup"
        android:gravity="center_horizontal"
        android:textColor="#fff"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="70dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/plssign"
        android:fontFamily="sans-serif-condensed"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="130dp"
        android:textColor="#fff"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/loginback"
        android:layout_marginTop="200dp"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:textColorHint="@color/colorAccent"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_height="80dp">

            <EditText
                android:layout_width="match_parent"
                android:autofillHints="@string/em"
                android:id="@+id/Eloginreport"
                android:layout_marginTop="50dp"
                android:padding="20dp"
                android:layout_gravity="center_horizontal"
                android:drawableStart="@drawable/email"
                android:drawablePadding="20dp"
                android:inputType="textEmailAddress"
                android:hint="@string/em"
                android:layout_height="70dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="120dp"
            android:textColorHint="@color/colorAccent"
            app:passwordToggleTint="#1927DE"
            android:layout_centerHorizontal="true"
            android:layout_height="80dp">

            <EditText
                android:layout_width="match_parent"
                android:id="@+id/Ploginreport"
                android:autofillHints="@string/ps"
                android:layout_marginTop="120dp"
                android:padding="20dp"
                android:layout_gravity="center_horizontal"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="20dp"
                android:inputType="textPassword"
                android:hint="@string/ps"
                android:layout_height="70dp"/>

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="100dp"
            android:background="@drawable/loginbtnback"
            android:layout_marginTop="230dp"
            android:text="@string/nav_signup"
            android:id="@+id/Btnloginreport"
            android:textColor="#fff"
            android:textStyle="bold"
            android:fontFamily="monospace"
            android:layout_centerHorizontal="true"
            android:layout_height="40dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="290dp"
            android:text="@string/fgp"
            android:textStyle="bold"
            android:id="@+id/forgetloginreport"
            android:fontFamily="casual"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:textColor="#F80707"
            android:layout_height="wrap_content"/>

        <ProgressBar
            android:layout_width="50dp"
            android:id="@+id/loginreportprogressbar"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"
            android:layout_height="50dp"/>

    </RelativeLayout>

</RelativeLayout>