<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".BrigadeBoys">

    <ImageView
        android:layout_width="match_parent"
        android:contentDescription="@string/nav_img1"
        android:background="@drawable/boysandgirlstopdesign"
        android:layout_height="200dp"/>

    <ImageView
        android:layout_width="100dp"
        android:contentDescription="@string/nav_img1"
        android:src="@drawable/boysbrigade"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        android:layout_height="100dp"/>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/vbs"
        android:textColor="#fff"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textSize="37sp"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">

        <GridLayout
            android:layout_width="match_parent"
            android:columnCount="2"
            android:rowCount="2"
            android:layout_marginTop="-20dp"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:id="@+id/bsc1"
                app:cardBackgroundColor="#3F08A3"
                android:layout_marginTop="300dp"
                app:cardCornerRadius="10dp"
                android:layout_height="100dp">

                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/snb"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#FFEB3B"
                    android:layout_marginTop="35dp"
                    android:textAllCaps="true"
                    android:layout_height="wrap_content"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:id="@+id/bsc2"
                app:cardBackgroundColor="#3F08A3"
                android:layout_marginStart="20dp"
                android:layout_marginTop="300dp"
                app:cardCornerRadius="10dp"
                android:layout_height="100dp">

                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/comp"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#FFEB3B"
                    android:layout_marginTop="35dp"
                    android:textAllCaps="true"
                    android:layout_height="wrap_content"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:id="@+id/bsc3"
                app:cardBackgroundColor="#3F08A3"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="20dp"
                android:layout_height="100dp">

                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/jn"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#FFEB3B"
                    android:layout_marginTop="35dp"
                    android:textAllCaps="true"
                    android:layout_height="wrap_content"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:id="@+id/bsc4"
                app:cardBackgroundColor="#3F08A3"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="10dp"
                android:layout_height="100dp">

                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/an"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#FFEB3B"
                    android:layout_marginTop="35dp"
                    android:textAllCaps="true"
                    android:layout_height="wrap_content"/>

            </androidx.cardview.widget.CardView>



        </GridLayout>
    </ScrollView>


</RelativeLayout>